yakle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: yakle-ingress
  namespace: yakle
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`yakle.sungju.xyz`)
      services:
        - name: yakle-service
          port: 3000
